# a4-static-router

./: README.md  setup.sh  submit.tar
cpp/: CMakeLists.txt
cpp/proto/: generate_python_proto.sh
cpp/src/: CMakeLists.txt
cpp/src/RouterLib/: CMakeLists.txt  IRoutingTable.h  IStaticRouter.h  RouterTypes.h  RoutingTableFactory.cpp  RoutingTableFactory.h  StaticRouterFactory.cpp  StaticRouterFactory.h
cpp/src/RouterLib/detail/: ArpCache.cpp  ArpCache.h  RoutingTable.cpp  RoutingTable.h  StaticRouter.cpp  StaticRouter.h
cpp/src/detail/: BridgeClient.cpp  BridgeClient.h  BridgeSender.cpp  BridgeSender.h
cpp/test/: whatisthis.txt
py/: topology.py
py/http_server1/: webserver.py
py/http_server2/: webserver.py
